@@ -146,7 +146,6 @@ public final class ChinchompaSwingHandler extends RangeSwingHandler {
 				s.getVictim().animate(s.getVictim().getProperties().getDefenceAnimation());
 			}
 		}
-        addExperience(entity, victim, state);
 	}
 
 	/**
